--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -615,6 +615,7 @@ serverOnlyFiles = [
     "repl/resync.cpp",
     "repl/rs_initialsync.cpp",
     "repl/rs_sync.cpp",
+    "repl/storage_interface_impl.cpp",
     "repl/sync_source_feedback.cpp",
     "service_context_d.cpp",
     "stats/fill_locker_info.cpp",
