--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -3509,6 +3509,8 @@ buildvariants:
   - name: jsCore_small_oplog_WT
   - name: jsCore_small_oplog_rs
   - name: jsCore_small_oplog_rs_WT
+  - name: jsCore_v33_validate
+  - name: jsCore_v33_validate_WT
   - name: mmap
   - name: mongosTest
   - name: noPassthrough
