SERVER-22150 Multiversion download script now uses the feed https://downloads.mongodb.org/full.json
Former-commit-id: bc3f6f075b52307eb5ad5ff62f18e19634c36cd6

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -361,7 +361,7 @@ functions:
         set -o verbose
 
         rm -rf /data/install /data/multiversion
-        ${python|python} buildscripts/setup_multiversion_mongodb.py /data/install /data/multiversion ${multiversion_platform_arch|"Linux/x86_64"} "2.4" "2.6" "3.0" "3.2.1"
+        ${python|python} buildscripts/setup_multiversion_mongodb.py /data/install /data/multiversion "base" ${multiversion_platform_arch|"Linux/x86_64"} "2.4" "2.6" "3.0" "3.2.1"
 
   "download mongod for validation checking" :
     command: shell.exec
@@ -372,7 +372,7 @@ functions:
         set -o verbose
 
         rm -rf /data/install /data/multiversion
-        ${python|python} buildscripts/setup_multiversion_mongodb.py /data/install /data/multiversion ${multiversion_platform_arch|"Linux/x86_64"} "3.3.10"
+        ${python|python} buildscripts/setup_multiversion_mongodb.py /data/install /data/multiversion "base" ${multiversion_platform_arch|"Linux/x86_64"} "3.3.10"
 
   "cleanup environment" :
     command: shell.exec
@@ -2411,7 +2411,6 @@ buildvariants:
   - name: jstestfuzz_sharded_WT
   - name: mmap
   - name: mongosTest
-  - name: multiversion
   - name: noPassthrough
   - name: noPassthrough_WT
   - name: noPassthroughWithMongod
@@ -2440,7 +2439,6 @@ buildvariants:
   - name: replication_auth
   - name: sharding
   - name: sharding_legacy
-  - name: sharding_legacy_multiversion
   - name: sharding_WT
   - name: sharding_auth
   - name: sharding_csrs_upgrade
@@ -3377,7 +3375,7 @@ buildvariants:
     push_bucket: downloads.mongodb.org
     push_name: win32
     push_arch: x86_64-2008plus
-    multiversion_platform_arch: "win32/x86_64-2008plus"
+    multiversion_platform_arch: "Windows/x86_64-2008plus"
     msi_target: msi
     content_type: application/zip
     compile_flags: --release --win-version-min=ws08r2 -j$(grep -c ^processor /proc/cpuinfo) MONGO_DISTMOD=2008plus VARIANT_DIR=win32
@@ -4511,7 +4509,6 @@ buildvariants:
   - name: jstestfuzz_sharded_WT
   - name: mmap
   - name: mongosTest
-  - name: multiversion
   - name: noPassthrough
   - name: noPassthrough_WT
   - name: noPassthroughWithMongod
@@ -4542,7 +4539,6 @@ buildvariants:
   - name: sharding_csrs_upgrade
   - name: sharding_csrs_upgrade_WT
   - name: sharding_csrs_upgrade_auth_WT
-  - name: sharding_legacy_multiversion
   - name: slow1
   - name: slow1_WT
   - name: slow2
