SERVER-25947 set multiversion_platform_arch for Windows
Former-commit-id: 22af9339872802479af1961d3c7e7eeab9a86344

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -3481,6 +3481,7 @@ buildvariants:
     push_name: win32-debug
     push_arch: x86_64-2008plus
     content_type: application/zip
+    multiversion_platform_arch: "Windows/x86_64-2008plus"
     num_jobs_available: 1
     compile_flags: --dbg=on --opt=on --win-version-min=ws08r2 -j$(grep -c ^processor /proc/cpuinfo) MONGO_DISTMOD=2008plus
     ext: zip
