--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -517,7 +517,6 @@ serverOnlyFiles = [
     "catalog/cursor_manager.cpp",
     "catalog/database.cpp",
     "catalog/database_holder.cpp",
-    "catalog/document_validation.cpp",
     "catalog/drop_collection.cpp",
     "catalog/drop_database.cpp",
     "catalog/drop_indexes.cpp",
@@ -655,6 +654,7 @@ serveronlyLibdeps = [
     "$BUILD_DIR/third_party/shim_snappy",
     "auth/authmongod",
     "catalog/collection_options",
+    "catalog/document_validation",
     "catalog/index_key_validate",
     "commands/killcursors_common",
     "collection_index_usage_tracker",
