SERVER-26484 Blacklist sharding/jumbo1.js form sharding continuous csrs stepdown suite
This test starts the balancer by doing a non-retryable config server write.


Former-commit-id: ae46881f1a59d341507fbc7179790896c1ccec7e

--- a/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
@@ -78,6 +78,7 @@ selector:
     - jstests/sharding/parallel.js
     - jstests/sharding/migrateBig.js
     - jstests/sharding/sharding_rs1.js
+    - jstests/sharding/jumbo1.js
     # Calls the config server primary directly (not through mongos)
     - jstests/sharding/moveprimary_ignore_sharded.js
     - jstests/sharding/min_optime_recovery.js
