SERVER-7200 Write oplog entries on secondaries before applying
Manual backport of b2e7d4f4551d2da9085e216258284b1685ae03ac [formerly 34c6c691a038eac1ac3ee16e1eedc54aab964774] along with fixes
and tests from:

f10870df7d3c74081810458b5e827074e15520fc [formerly b5d2b06f8a08171fd96ef8d128c4f7ecedcb8f93]
dd58d9e2baec58bb4a6cb7407775a6f46de94928 [formerly dc83fb0433fcae6e72f035df7458473b59223eb5]
e19efc677cc878b8c77557ec417f7e883e94c3e4 [formerly fec839b99f4b9e08016112fe8b9492e327af91b8]
0dfe630b39404a2dccb0ec730033af61adebd8f5 [formerly bf86770c8a5de97b30bc008ad59e34de99065c60]


Former-commit-id: 5db0a55a264ee326bff5598249639ef479628f37

--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -710,7 +710,9 @@ env.Library(
         'roll_back_local_operations.cpp',
     ],
     LIBDEPS=[
+        'optime',
         '$BUILD_DIR/mongo/base',
+        '$BUILD_DIR/mongo/bson/util/bson_extract',
         '$BUILD_DIR/mongo/util/foundation',
     ],
 )
