--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -253,7 +253,7 @@ functions:
           TAGS="3.1.8-Baseline 3.2.0-Baseline 3.2.9-Baseline"
           PROJECT="sys-perf-3.2"
           OVERRIDEFILE="../src/dsi/dsi/analysis/v3.2/system_perf_override.json"
-          python -u ../src/dsi/dsi/analysis/dashboard_gen.py --rev ${revision} -f history.json -t tags.json --refTag $TAGS --overrideFile $OVERRIDEFILE --project_id sys-perf --task_name ${task_name} --variant ${build_variant} --jira-user ${perf_jira_user} --jira-password ${perf_jira_pw} || true
+          python -u ../src/dsi/dsi/analysis/dashboard_gen.py --rev ${revision} -f history.json -t tags.json --refTag $TAGS --overrideFile $OVERRIDEFILE --project_id sys-perf --variant ${build_variant} --task ${task_name} --jira-user ${perf_jira_user} --jira-password ${perf_jira_pw} || true
     - command: "json.send"
       params:
          name: "dashboard"
