SERVER-26689: Updated system-perf.yml and longevity.yml to use updated setup-cluster.sh
(cherry picked from commit 9588fedaa681f8ac2aae923db977c8f003530335 [formerly 6e56f3f3cadc94dae09209df01098f8319835f19])


Former-commit-id: 01048382eb13ebb67a41c913e53ce165e92cb1a7

--- a/etc/longevity.yml
+++ b/etc/longevity.yml
@@ -63,7 +63,7 @@ functions:
           set -e
           set -o verbose
           cd ./clusters/${cluster}
-          ../../bin/setup-cluster.sh ${cluster}
+          ../../bin/setup-cluster.sh ${cluster} false
           echo "EC2 Cluster CREATED."
 
   "configure mongodb cluster":
