--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -385,6 +385,57 @@ functions:
 
         rm -rf src /data/db/* mongo-coredumps.tgz ~/.aws
 
+  "set up kitchen credentials":
+    command: shell.exec
+    params:
+      silent: true
+      script: |
+        set -o errexit
+
+        mkdir -p ~/.ssh ~/.aws
+        echo -n "${kitchen_private_key}" > ~/.ssh/kitchen.pem
+        chmod 0600 ~/.ssh/kitchen.pem
+
+        cat <<EOF > ~/.aws/config
+        [default]
+        region = us-east-1
+        EOF
+
+        cat <<EOF > ~/.aws/credentials
+        [default]
+        aws_access_key_id = ${kitchen_aws_key}
+        aws_secret_access_key = ${kitchen_aws_secret}
+        EOF
+
+  "run kitchen":
+    command: shell.exec
+    type: test
+    params:
+      shell: bash
+      working_dir: src/buildscripts/package_test
+      script: |
+        set -o errexit
+
+        export KITCHEN_ARTIFACTS_URL="https://s3.amazonaws.com/mciuploads/${project}/${build_variant}/${revision}/artifacts/${build_id}.tgz"
+        export KITCHEN_SECURITY_GROUP="${kitchen_security_group}"
+        export KITCHEN_SSH_KEY_ID="${kitchen_ssh_key_id}"
+        export KITCHEN_SUBNET="${kitchen_subnet}"
+
+        for i in {1..3}
+        do
+          if ! kitchen verify "${packager_distro}"; then
+            verified="false"
+            kitchen destroy "${packager_distro}" || true
+            sleep 30
+          else
+            verified="true"
+            break
+          fi
+        done
+
+        kitchen destroy "${packager_distro}" || true
+        test "$verified" = "true"
+
 pre:
   - command: shell.track
   - command: shell.exec
@@ -1842,6 +1893,14 @@ tasks:
       resmoke_args: --suites=tool --storageEngine=wiredTiger
       run_multiple_jobs: true
 
+- name: package
+  depends_on:
+  - name: compile
+  commands:
+    - func: "fetch artifacts"
+    - func: "set up kitchen credentials"
+    - func: "run kitchen"
+
 - name: push
   patchable: false
   depends_on:
@@ -2822,6 +2881,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: ubuntu1404
@@ -2930,6 +2992,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: ubuntu1604
@@ -3038,6 +3103,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: enterprise-linux-64-amazon-ami
@@ -3114,6 +3182,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: amazon
@@ -3225,6 +3296,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
     distros:
     - rhel70
@@ -4258,6 +4332,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
     distros:
     - rhel70
@@ -4308,6 +4385,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: enterprise-rhel-71-ppc64le
@@ -4662,6 +4742,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
     distros:
     - rhel70
@@ -4771,6 +4854,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 ###########################################
@@ -4824,6 +4910,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: enterprise-ubuntu1404-64
@@ -4873,6 +4962,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: enterprise-ubuntu1604-64
@@ -4922,6 +5014,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -4977,6 +5072,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: suse12
@@ -5086,6 +5184,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -5136,6 +5237,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: suse11
@@ -5245,6 +5349,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 ###########################################
@@ -5381,6 +5488,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: enterprise-debian81-64
@@ -5430,6 +5540,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -5543,6 +5656,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: debian81
@@ -5655,6 +5771,9 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
