SERVER-27141: Update perf.yml, system-perf.yml, and longevity.yml on 3.4 branch
Former-commit-id: c5b7e6a0b5252ea30c22efd4a79d7de5211a5110

--- a/etc/longevity.yml
+++ b/etc/longevity.yml
@@ -257,7 +257,7 @@ functions:
           set -o verbose
           TAG="3.2.1-Baseline"
           PROJECT="mongo-longevity"
-          OVERRIDEFILE="../src/dsi/dsi/analysis/master/longevity_override.json"
+          OVERRIDEFILE="../src/dsi/dsi/analysis/v3.4/longevity_override.json"
           python -u ../src/dsi/dsi/analysis/post_run_check.py ${script_flags} --reports-analysis reports --perf-file reports/perf.json --rev ${revision} -f history.json -t tags.json --refTag $TAG --overrideFile $OVERRIDEFILE --project_id $PROJECT --task_name ${task_name} --variant ${build_variant}
 
 tasks:
@@ -388,7 +388,7 @@ buildvariants:
     numShard: 3
     storageEngine: wiredTiger
     use_scons_cache: true
-    project: &project longevity
+    project: &project longevity-v3.4
   run_on:
     - "rhel70-perf-longevity"
   tasks:
