SERVER-27130 switch mongo-rocks to v3.4 branch for MongoDB 3.4
Former-commit-id: 9b2327ffcdeefa259c700ad1aed4df94de307145

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -3092,7 +3092,7 @@ modules:
 - name: rocksdb
   repo: git@github.com:mongodb-partners/mongo-rocks.git
   prefix: src/mongo/db/modules
-  branch: master
+  branch: v3.4
 
 #######################################
 #            Buildvariants            #
