SERVER-27042 Stabilize currentop.js and add unit tests for lock state reporting
Former-commit-id: 9d920663421437e65706b0587077781895984e2d

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -618,7 +618,6 @@ serverOnlyFiles = [
     "repl/storage_interface_impl.cpp",
     "repl/sync_source_feedback.cpp",
     "service_context_d.cpp",
-    "stats/fill_locker_info.cpp",
     "stats/lock_server_status_section.cpp",
     "stats/range_deleter_server_status.cpp",
     "stats/snapshots.cpp",
@@ -689,6 +688,7 @@ serveronlyLibdeps = [
     "s/sharding",
     "startup_warnings_mongod",
     "stats/counters",
+    "stats/fill_locker_info",
     "stats/top",
     "storage/devnull/storage_devnull",
     "storage/ephemeral_for_test/storage_ephemeral_for_test",
