SERVER-26981: Set enterprise module branch to v3.2 in perf.yml
Former-commit-id: be377ee0d7d91aabcf678c1c3e0efcee3942e2e5

--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -26,7 +26,7 @@ modules:
 - name: enterprise
   repo: git@github.com:10gen/mongo-enterprise-modules.git
   prefix: src/mongo/db/modules
-  branch: master
+  branch: v3.2
 
 
 functions:
