SERVER-26952: Cache SCRAM-SHA-1 ClientKey
(cherry picked from commit 98c339d32bd5d9c7be28b3fb2a171a9f4886a0c4 [formerly 47da0b53f9cd27aeec1d2822780784866269a47d])


Former-commit-id: c53363894310c144aefd06ce323d348735789601

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -2075,6 +2075,17 @@ tasks:
       run_multiple_jobs: true
 
 - <<: *task_template
+  name: multiversion_auth
+  commands:
+  - func: "do setup"
+  - func: "do multiversion setup"
+  - func: "run tests"
+    vars:
+      task_path_suffix: /data/multiversion
+      resmoke_args: --suites=multiversion_auth --storageEngine=mmapv1 --excludeWithAnyTags=requires_wiredtiger
+      run_multiple_jobs: true
+
+- <<: *task_template
   name: multiversion_WT
   commands:
   - func: "do setup"
@@ -3299,6 +3310,7 @@ buildvariants:
   - name: mmap
   - name: mongosTest
   - name: multiversion
+  - name: multiversion_auth
   - name: multiversion_WT
   - name: multiversion_multistorage_engine
   - name: noPassthrough
@@ -4739,6 +4751,7 @@ buildvariants:
   - name: mmap
   - name: mongosTest
   - name: multiversion
+  - name: multiversion_auth
   - name: multiversion_WT
   - name: multiversion_multistorage_engine
   - name: noPassthrough
@@ -5573,6 +5586,7 @@ buildvariants:
   - name: mmap
   - name: mongosTest
   - name: multiversion
+  - name: multiversion_auth
   - name: multiversion_WT
   - name: multiversion_multistorage_engine
   - name: noPassthrough
@@ -5796,6 +5810,7 @@ buildvariants:
   - name: mmap
   - name: mongosTest
   - name: multiversion
+  - name: multiversion_auth
   - name: multiversion_WT
   - name: multiversion_multistorage_engine
   - name: noPassthrough
@@ -8341,6 +8356,7 @@ buildvariants:
   - name: mmap
   - name: mongosTest
   - name: multiversion
+  - name: multiversion_auth
   - name: multiversion_WT
   - name: multiversion_multistorage_engine
   - name: noPassthrough
@@ -8516,6 +8532,7 @@ buildvariants:
   - name: mmap
   - name: mongosTest
   - name: multiversion
+  - name: multiversion_auth
   - name: multiversion_WT
   - name: multiversion_multistorage_engine
   - name: noPassthrough
