SERVER-26765 move tests in jstests/views to other suites
This eliminates the views and views_rs suites; views testing will be done in
other suites to allow them to be picked up in passthrough suites.

(cherry picked from commit 5e32e218cf85ee88e3fb27a86fe9562d827a1d88 [formerly 39bcdc6e6ef4980d6103ca0746ef1f4347aae841])


Former-commit-id: b0c108dfdc788b6f5128c580917eb18006403e30

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -1711,6 +1711,7 @@ tasks:
     vars:
       resmoke_args: --suites=gle_auth --shellWriteMode=legacy --shellReadMode=legacy --storageEngine=mmapv1 --excludeWithAnyTags=requires_find_command
       run_multiple_jobs: true
+      task_excluded_tags: requires_find_command
 
 - <<: *task_template
   name: gle_auth_WT
@@ -1720,6 +1721,7 @@ tasks:
     vars:
       resmoke_args: --suites=gle_auth --shellWriteMode=legacy --shellReadMode=legacy --storageEngine=wiredTiger --excludeWithAnyTags=requires_find_command
       run_multiple_jobs: true
+      task_excluded_tags: requires_find_command
 
 - <<: *task_template
   name: gle_auth_write_cmd
@@ -1747,6 +1749,7 @@ tasks:
     vars:
       resmoke_args: --suites=gle_auth_basics_passthrough --shellWriteMode=legacy --shellReadMode=legacy --storageEngine=mmapv1 --excludeWithAnyTags=requires_find_command
       run_multiple_jobs: true
+      task_excluded_tags: requires_find_command
 
 - <<: *task_template
   name: gle_auth_basics_passthrough_WT
@@ -1756,6 +1759,7 @@ tasks:
     vars:
       resmoke_args: --suites=gle_auth_basics_passthrough --shellWriteMode=legacy --shellReadMode=legacy --storageEngine=wiredTiger --excludeWithAnyTags=requires_find_command
       run_multiple_jobs: true
+      task_excluded_tags: requires_find_command
 
 - <<: *task_template
   name: gle_auth_basics_passthrough_write_cmd
@@ -1820,6 +1824,7 @@ tasks:
     vars:
       resmoke_args: --suites=sharding_gle_auth_basics_passthrough --shellWriteMode=legacy --shellReadMode=legacy --storageEngine=mmapv1 --excludeWithAnyTags=requires_find_command
       run_multiple_jobs: true
+      task_excluded_tags: requires_find_command
 
 - <<: *task_template
   name: sharding_gle_auth_basics_passthrough_WT
@@ -1831,6 +1836,7 @@ tasks:
     vars:
       resmoke_args: --suites=sharding_gle_auth_basics_passthrough --shellWriteMode=legacy --shellReadMode=legacy --storageEngine=wiredTiger --excludeWithAnyTags=requires_find_command
       run_multiple_jobs: true
+      task_excluded_tags: requires_find_command
 
 - <<: *task_template
   name: sharding_gle_auth_basics_passthrough_write_cmd
@@ -2341,7 +2347,8 @@ tasks:
   - func: "do setup"
   - func: "run tests"
     vars:
-      resmoke_args: --suites=parallel --shellReadMode=legacy --shellWriteMode=compatibility --storageEngine=mmapv1 --excludeWithAnyTags=requires_find_command
+      resmoke_args: --suites=parallel --shellReadMode=legacy --shellWriteMode=compatibility --storageEngine=mmapv1
+      task_excluded_tags: requires_find_command
 
 - <<: *task_template
   name: parallel_compatibility_WT
@@ -2351,7 +2358,8 @@ tasks:
   - func: "do setup"
   - func: "run tests"
     vars:
-      resmoke_args: --suites=parallel --shellReadMode=legacy --shellWriteMode=compatibility --storageEngine=wiredTiger --excludeWithAnyTags=requires_find_command
+      resmoke_args: --suites=parallel --shellReadMode=legacy --shellWriteMode=compatibility --storageEngine=wiredTiger
+      task_excluded_tags: requires_find_command
 
 - <<: *task_template
   name: concurrency
@@ -2601,6 +2609,7 @@ tasks:
     vars:
       resmoke_args: --suites=sharding --shellReadMode=legacy --storageEngine=wiredTiger --excludeWithAnyTags=requires_find_command
       run_multiple_jobs: true
+      task_excluded_tags: requires_find_command
 
 - <<: *task_template
   name: sharding_auth
@@ -2755,42 +2764,6 @@ tasks:
   - func: "run tests"
     vars:
       resmoke_args: --suites=read_only_sharded --storageEngine=wiredTiger
-      run_multiple_jobs: true
-
-- <<: *task_template
-  name: views
-  commands:
-  - func: "do setup"
-  - func: "run tests"
-    vars:
-      resmoke_args: --suites=views --storageEngine=mmapv1
-      run_multiple_jobs: true
-
-- <<: *task_template
-  name: views_WT
-  commands:
-  - func: "do setup"
-  - func: "run tests"
-    vars:
-      resmoke_args: --suites=views --storageEngine=wiredTiger
-      run_multiple_jobs: true
-
-- <<: *task_template
-  name: views_rs
-  commands:
-  - func: "do setup"
-  - func: "run tests"
-    vars:
-      resmoke_args: --suites=views_rs --storageEngine=mmapv1
-      run_multiple_jobs: true
-
-- <<: *task_template
-  name: views_rs_WT
-  commands:
-  - func: "do setup"
-  - func: "run tests"
-    vars:
-      resmoke_args: --suites=views_rs --storageEngine=wiredTiger
       run_multiple_jobs: true
 
 - name: package
@@ -3424,10 +3397,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: push
 
 - name: linux-64-repeated-execution
@@ -3564,10 +3533,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
 
 - name: linux-64-duroff
   display_name: Linux (No Journal)
@@ -3636,10 +3601,6 @@ buildvariants:
   - name: sharding_jscore_passthrough
   - name: tool
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
 
 - name: linux-64-lsm
   stepback: false
@@ -3695,8 +3656,6 @@ buildvariants:
   - name: sharding_jscore_passthrough_wire_ops_WT
   - name: tool_WT
   - name: unittests
-  - name: views_WT
-  - name: views_rs_WT
 
 - name: ubuntu1204
   display_name: SSL Ubuntu 12.04
@@ -3811,10 +3770,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -3942,10 +3897,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -4064,10 +4015,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -4506,10 +4453,6 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -4631,10 +4574,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -4994,10 +4933,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
 
 - name: enterprise-windows-64
   display_name: "* Enterprise Windows"
@@ -5059,10 +4994,6 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: push
     distros:
     - rhel70-small
@@ -5345,10 +5276,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: push
     distros:
     - rhel70-small
@@ -5489,10 +5416,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
 
 - name: enterprise-osx-107
   display_name: Enterprise OS X 10.7
@@ -5538,10 +5461,6 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: push
     distros:
     - rhel70-small
@@ -5764,10 +5683,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -5984,10 +5899,6 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
 
 - name: enterprise-rhel-70-64-bit
   display_name: Enterprise RHEL 7.0
@@ -6162,10 +6073,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -6301,10 +6208,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -6442,8 +6345,6 @@ buildvariants:
   # - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views_WT
-  - name: views_rs_WT
   - name: push
     distros:
     - rhel70-small
@@ -6579,8 +6480,6 @@ buildvariants:
   # - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views_WT
-  - name: views_rs_WT
   - name: push
     distros:
     - rhel70-small
@@ -6716,8 +6615,6 @@ buildvariants:
   # - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views_WT
-  - name: views_rs_WT
   - name: push
     distros:
     - rhel62-small
@@ -7194,10 +7091,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -7461,10 +7354,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -7555,10 +7444,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: push
     distros:
     - rhel70-small
@@ -7798,10 +7683,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -7923,10 +7804,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
   - name: package
     distros:
     - ubuntu1604-packer
@@ -8023,8 +7900,6 @@ buildvariants:
   - name: sslSpecial
   - name: tool
   - name: unittests
-  - name: views_WT
-  - name: views_rs_WT
 
 - name: linux-64-ephemeralForTest
   display_name: Linux (ephemeralForTest)
@@ -8101,8 +7976,6 @@ buildvariants:
   - name: sharding_jscore_passthrough_wire_ops_WT
   - name: tool
   - name: unittests
-  - name: views_WT
-  - name: views_rs_WT
 
 - name: enterprise-rhel-71-ppc64le-inmem
   display_name: Enterprise RHEL 7.1 PPC64LE (inMemory) DEBUG
@@ -8182,7 +8055,6 @@ buildvariants:
   - name: sslSpecial
   - name: tool
   - name: unittests
-  - name: views
 
 - name: enterprise-rhel-72-s390x-inmem
   display_name: Enterprise RHEL 7.2 s390x (inMemory) DEBUG
@@ -8269,7 +8141,6 @@ buildvariants:
   - name: sslSpecial
   - name: tool
   - name: unittests
-  - name: views
 
 - name: ubuntu1404-rocksdb
   display_name: Ubuntu 14.04 (RocksDB)
@@ -8339,7 +8210,6 @@ buildvariants:
   - name: serial_run
   - name: sharding_jscore_passthrough
   - name: unittests
-  - name: views
 
 ###########################################
 #     Experimental buildvariants          #
@@ -8487,9 +8357,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs_WT
 
 - name: ubuntu1604-asan
   display_name: ~ ASAN SSL Ubuntu 16.04
@@ -8663,9 +8530,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs_WT
 
 - name: enterprise-ubuntu-dynamic-1604-64-bit
   display_name: "* Shared Library Enterprise Ubuntu 16.04"
@@ -8815,10 +8679,6 @@ buildvariants:
   - name: tool
   - name: tool_WT
   - name: unittests
-  - name: views
-  - name: views_WT
-  - name: views_rs
-  - name: views_rs_WT
 
 - name: ubuntu1404-jepsen
   display_name: ~ Jepsen Ubuntu 14.04
